# mari

./: .gitignore  README.md  pyproject.toml
bot/: __main__.py
bot/exts/: ai.py  collect.py  markov.py  stats.py
